[project]
name = "wsdiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jalido", email = "jalido@bu.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
